@@ -1,10 +1,10 @@
 {
-  "count": 2,
+  "count": 1,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2025-01-18T00:00:00Z",
-      "count": 2,
+      "timestamp": "2025-04-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
